--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>About | Ruby on Rails Tutorial Sample App</title>
-</head>
-<body>
-  <h1>Sample App</h1>
-  <p>This is the about page for the sample application.
-  </p>
-</body>
-</html>
+<% provide(:title, "About") %>
+<h1>Sample App</h1>
+<p>This is the about page for the sample application.</p>
+
