--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,20 +48,20 @@ h2 {
 }
 
 p {
-font-size: 1.1em;
-line-height: 1.7em;
+  font-size: 1.1em;
+  line-height: 1.7em;
 }
 
 /* header */
 #logo {
-float: left;
-margin-right: 10px;
-font-size: 1.7em;
-color: #fff;
-text-transform: uppercase;
-letter-spacing: -1px;
-padding-top: 9px;
-font-weight: bold;
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
 &:hover {
   color: #fff;
   text-decoration: none ;
@@ -70,25 +70,68 @@ font-weight: bold;
 
 /* footer */
 footer {
-margin-top: 45px;
-padding-top: 5px;
-border-top: 1px solid $gray-medium-light;
-color: $gray-light;
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light;
 a {
-color: #gray;
+  color: #gray;
 &:hover {
-color: #gray-darker;
-}
+  color: #gray-darker;
+  }
 }
 small {
-float: left;
+  float: left;
 }
 ul {
-float: right;
-list-style: none;
+  float: right;
+  list-style: none;
 li {
-float: left;
-margin-left: 15px;
+  float: left;
+  margin-left: 15px;
+  }
 }
 }
+/* miscellaneous*/
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+}
+
+/* sidebar */
+aside {
+  section.user_info {
+    margin-top: 20px;
+  }
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+  &:first-child {
+    border: 0;
+    padding-top: 0;
+  }
+  span {
+    display: block;
+    margin-bottom: 3px;
+    line-height: 1;
+  }
+  h1 {
+    font-size: 1.4em;
+    text-align: left;
+    letter-spacing: -1px;
+    margin-bottom: 3px;
+    margin-top: 0px;
+   }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+.gravatar_edit {
+  margin-top: 15px;
 }
