Make a test for valid user

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,6 +100,24 @@ li {
   }
 }
 }
+
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
 /* miscellaneous*/
 
 .debug_dump {
@@ -170,4 +188,10 @@ input, textarea, select, .uneditable-input {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+/* Dropdown menu*/
+
+.dropdown-menu.active {
+  display: block;
 }
