--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,12 +23,12 @@
                   <li><%= link_to "Settings", "#" %></li>
                   <li class="divider"></li>
                   <li>
-                    <%= link_to "Log out", login_path, data: { "turbo-method": :delete} %>
+                    <%= link_to "Log out", logout_path, data: { "turbo-method": :delete} %>
                   </li>
                 </ul>
               </li>
               <% else %>
-                <li><%= link_to "Log in", '#' %></li>
+                <li><%= link_to "Log in", login_path %></li>
             <% end %>
           </ul>
         </nav>
